--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -138,7 +138,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: Test_Workflow
+          ref: feature/workflow-test
 
       - name: Checkout googletest
         uses: actions/checkout@v3
