Remove Debug flag while building thunder

--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -138,7 +138,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: develop
+          ref: L2TestPlugin_COMRPC
 
       - name: Checkout googletest
         if: steps.cache.outputs.cache-hit != 'true'
