--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -100,7 +100,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-softwareupdate
           path: entservices-softwareupdate
-          ref: Test_Workflow
+          ref: develop
 
       - name: Checkout entservices-testframework
         uses: actions/checkout@v3
